--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <a href="www.youtube.com"> <h4>Youtube</h4> </a>
 <a href="https://mail.google.com/"> <h4>Google Gmail</h4> </a>
 <a href="https://www.office.com"> <h4>Microsft 365</h4> </a>
-
+<a href="https://plingifyplugos.github.io/Boot/"> <h4>PlingifyPlugOS</h4> </a>
+<a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug65</h4> </a>
+     
 </div>
 
 </div>
