--- a/index.html
+++ b/index.html
@@ -29,17 +29,10 @@
 <a href="https://mail.google.com/"> <h4>Google Gmail</h4> </a>
 <a href="https://www.office.com"> <h4>Microsft 365</h4> </a>
 <a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug(Site Temp Closed)</h4> </a>
-     <h3>The Links Below Are Not Currently Working Due To Not Published.</h3>
-     <a href="   "> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
-     <a href="   "> <h4>PlingifyPlugOS-Figma-PC</h4> </a>
-     <h3>Expected To Release In 2025:</h3>
-     <a href="   "> <h4>PlingifyPlugOS-AndroidROM-Mobile</h4> </a>
-     <h3>Expected To Release In 2027:</h3>
-     <a href="   "> <h4>PlingifyPlugOS-PlingifyPlug Software-Mobile</h4> </a>
-     <h3>Expected To Release In 2029:</h3>
-     <a href="   "> <h4>PlingifyPlugOS-Linux-PC</h4> </a>
-     <h3>Expected To Release In 2032:</h3>
-     <a href="   "> <h4>PlingifyPlugOS-PlingifyPlug Software-PC</h4> </a>
+     <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
+     <a href="   "> <h4>PlingifyPlugOS-Figma-PC(COMING SOON)</h4> </a>
+     <h3>AndroidROM:</h3>
+     <a href="   "> <h4>PlingifyPlugOS-AndroidROM-Mobile(NOT RELEASED)</h4> </a>
 
      <p> The reason for the long wait times for software is due to PlingifyPlug only having 1 developer due to not PlingifyPlug not making any money and having no income.</p>    </h4>
      
