--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 <a href="https://mail.google.com/"> <h4>Google Gmail</h4> </a>
 <a href="https://www.office.com"> <h4>Microsft 365</h4> </a>
 <a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug(Site Temp Closed)</h4> </a>
+     <h3>Figma:</h3>
      <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
-     <a href="   "> <h4>PlingifyPlugOS-Figma-PC(COMING SOON)</h4> </a>
      <h3>AndroidROM:</h3>
      <a href="   "> <h4>PlingifyPlugOS-AndroidROM-Mobile(NOT RELEASED)</h4> </a>
 
-     <p> The reason for the long wait times for software is due to PlingifyPlug only having 1 developer due to not PlingifyPlug not making any money and having no income.</p>    </h4>
-     
+     <p> The reason for the long wait times for software is due to PlingifyPlug only having 2 developer due to not PlingifyPlug not making any money and having no income. If you have any expirence with Java, C++ or Android Studio please contact us PlingifyPlug please email SubscribePlingifyPlug@outlook.com.</p>    </h4>
+     <h5>Email List:</h5>
+     <p>SubscribePlingifyPlug@outlook.com To join our updates and infomation list. Please do not use this email yet as you will not be signed up to anything and would be entered to our Blacklisted emails/domians due to a software error.</p>
+     <p>IssuePlingifyPlug@outlook.com To remove your self from the updates and infomation list aswell as to report a bug, error, staff, developer, sugguest something or report and issue. You can use this to get support</p>
 </div>
 
 </div>
