--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlingifyPlug-Hub</title>
+    <title>PlingifyPlug-Hub-English</title>
 </head>
 <body> <div class="TEXT">
     <div class="toppagebox">
@@ -13,6 +14,12 @@
             <button class="btn">
                 <span class="btn-text-one"> ⟳ Reload Page</span>
                 <span class="btn-text-two" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">Click Here</span>
+            </button>
+              </button>
+
+              <button class="btn">
+                <span class="btn-text-one"> Welsh</span>
+                <span class="btn-text-two" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">Cliciwch Yma</span>
             </button>
               </button>
     
