--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>PlingifyPlug-Hub-English</title>
 </head>
 <body> <div class="TEXT">
+    <div class="img">
+        <img src="https://imagetolink.com/ib/qE2v4IGt7k.png">
+    </div>
     <div class="toppagebox">
         <h4 style="color: #fff;">PlingifyPlug-Hub</h4>
         <font style="color: #fff;">
@@ -19,7 +22,7 @@
 
               <button class="btn">
                 <span class="btn-text-one"> Welsh</span>
-                <span class="btn-text-two" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">Cliciwch Yma</span>
+                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Hub-Welsh/';" id="myButton" class="btn">Cliciwch Yma</span>
             </button>
               </button>
     
@@ -55,6 +58,11 @@
 </font>  </div>
 </body>
 <style>
+img{
+    width: 65px;
+    height: 65px;
+    border-radius: 15px;
+}
 
 .TEXT{
     font-family: Arial;
@@ -162,9 +170,10 @@ a:active {
 
 
 body {
-        height: 1250px;
-        background: linear-gradient(#0d1563, #b61111ce);
-      }
+background-image: url("https://imagetolink.com/ib/qE2v4IGt7k.png");
+background-size: cover;
+}
+
 </style>
 <SCRIPT language="JavaScript"> 
 
