--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlingifyPlug-Hub-English</title>
+    <title>PlingifyPlug-Hub</title>
 </head>
 <body> <div class="TEXT">
-    <div class="img">
-        <img src="https://imagetolink.com/ib/qE2v4IGt7k.png">
-    </div>
     <div class="toppagebox">
         <h4 style="color: #fff;">PlingifyPlug-Hub</h4>
         <font style="color: #fff;">
             <button class="btn">
                 <span class="btn-text-one"> ⟳ Reload Page</span>
                 <span class="btn-text-two" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">Click Here</span>
-            </button>
-              </button>
-
-              <button class="btn">
-                <span class="btn-text-one"> Welsh</span>
-                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Hub-Welsh/';" id="myButton" class="btn">Cliciwch Yma</span>
             </button>
               </button>
     
@@ -56,13 +46,9 @@
 
 <center><div id = "digital-clock"> </div> <p> 2023</p></center>
 </font>  </div>
+<script src="//code.tidio.co/1j4sx6r4tgoyt0duta9txfzbkbjwhdb8.js" async></script>
 </body>
 <style>
-img{
-    width: 65px;
-    height: 65px;
-    border-radius: 15px;
-}
 
 .TEXT{
     font-family: Arial;
@@ -170,10 +156,9 @@ a:active {
 
 
 body {
-background-image: url("https://imagetolink.com/ib/qE2v4IGt7k.png");
-background-size: cover;
-}
-
+        height: 1250px;
+        background: linear-gradient(#0d1563, #b61111ce);
+      }
 </style>
 <SCRIPT language="JavaScript"> 
 
