--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                 <span class="btn-text-two" onclick="window.location.reload();" onclick="window.location.href='/';" class="btn">Click Here</span>
             </button>
               </button>
+
+              <button class="btn">
+                <span class="btn-text-one"> Welsh</span>
+                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Hub-Welsh/';" id="myButton" class="btn">Cliciwch Yma</span>
+            </button>
+              </button>
     
     <p>‎</p>
 </div> 
@@ -28,7 +34,7 @@
 <a href="www.youtube.com"> <h4>Youtube</h4> </a>
 <a href="https://mail.google.com/"> <h4>Google Gmail</h4> </a>
 <a href="https://www.office.com"> <h4>Microsft 365</h4> </a>
-<a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug(Site Temp Closed)</h4> </a>
+<a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug</h4> </a>
      <h3>Figma:</h3>
      <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
      <h3>AndroidROM:</h3>
@@ -156,8 +162,8 @@ a:active {
 
 
 body {
-        height: 1250px;
-        background: linear-gradient(#0d1563, #b61111ce);
+  background-image: url("https://imagetolink.com/ib/qE2v4IGt7k.png");
+background-size: cover;
       }
 </style>
 <SCRIPT language="JavaScript"> 
