--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body> <div class="TEXT">
     <div class="toppagebox">
+        <div class="img">
+            <img src="https://imagetolink.com/ib/q8HJ1w6Z6c.png" alt="Report to staff!">
+        </div>
         <h4 style="color: #fff;">PlingifyPlug-Hub</h4>
         <font style="color: #fff;">
             <button class="btn">
@@ -51,6 +54,9 @@
 <center> <h3 style="color: #fff;"> PlingifyPlug© </h3> </center>
 
 <center><div id = "digital-clock"> </div> <p> 2023</p></center>
+<div class="img">
+    <img src="https://imagetolink.com/ib/SFfK8CeItB.png" alt="Report to staff.">
+</div>
 </font>  </div>
 <script src="//code.tidio.co/1j4sx6r4tgoyt0duta9txfzbkbjwhdb8.js" async></script>
 </body>
@@ -165,6 +171,12 @@ body {
   background-image: url("https://imagetolink.com/ib/qE2v4IGt7k.png");
 background-size: cover;
       }
+
+      img{
+    border-radius: 15px;
+    width: 65px;
+    height: 65px;
+}
 </style>
 <SCRIPT language="JavaScript"> 
 
