--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a href="www.youtube.com"> <h4>Youtube</h4> </a>
 <a href="https://mail.google.com/"> <h4>Google Gmail</h4> </a>
 <a href="https://www.office.com"> <h4>Microsft 365</h4> </a>
-<h3>PlingifyPlug Sites & Unblocker Websites</h3>
+<h3>PlingifyPlug Sites & Unblocker Websites:</h3>
 <a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug</h4> </a>
 <a href="https://plingifyplug.github.io/CloudFlare/"> <h4>Website Unblocker CloudFlare (Gone-404 Edition)</h4></a>
 <a href="#"><h4>Website Unblocker Coming Soon (r.pluralsight.gq Edition)</h4></a>
