--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug</h4> </a>
 <a href="https://plingifyplug.github.io/PlingifyPlug-Videos-Tutorials/"> <h4>PlingifyPlug-Page-Videos-Tutorials</h4> </a>
 <h3>RammerHead Browsers:</h3>
-<a href="https://plingifyplug.github.io/CloudFlare/"> <h4>RammerHead-English (Gone-404 Edition)</h4></a>
-<a href="https://plingifyplug.github.io/RammerHead-Technologys/"><h4>RammerHead-English (Technologys Edition)</h4></a>
-<a href="https://plingifyplug.github.io/RammerHead-NotVilatheaRo/"><h4>RammerHead-English (NotVilatheaRo Edition)</h4></a>
+<a href="https://plingifyplug.github.io/CloudFlare/"> <h4>RammerHead-English-Paid (Gone-404 Edition)</h4></a>
+<a href="https://plingifyplug.github.io/RammerHead-Technologys/"><h4>RammerHead-English-Free (Technologys Edition)</h4></a>
+<a href="https://plingifyplug.github.io/RammerHead-NotVilatheaRo/"><h4>RammerHead-English-Free (NotVilatheaRo Edition)</h4></a>
      <h3>Figma:</h3>
      <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
      <h3>AndroidROM:</h3>
