--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <span class="btn-text-one"> Welsh</span>
                 <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Hub-Welsh/';" id="myButton" class="btn">Cliciwch Yma</span>
             </button>
+
               </button>
               <button class="btn">
                 <span class="btn-text-one"> SignIn-Register</span>
@@ -30,7 +31,11 @@
             </button>
               </button>
 
-
+              </button>
+              <button class="btn">
+                <span class="btn-text-one">Server-Website-Status(Coming Soon)</span>
+                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/PlingifyPlug-SignIn-Register/';" id="myButton" class="btn">Click Here</span>
+            </button>
 
               <!-- Trigger/Open The Modal -->
  <button class="btn">
@@ -57,6 +62,16 @@
 </div>
 </div>
 
+
+
+
+    <p>‎</p>
+<div class="AnnouncmentsBox">
+
+<h3>All Announcments & Alerts Will Be Shown Here:</h3>
+<p><b>School-Account & Wellington Academy Gone-404 is currently under review and has been Flared due to a IP config found not at the location.</b></p>
+<p><b>Adding a Status Site to check where the sites are blocked-down or brocken.</b></p>
+</div>
 
     <p>‎</p>
 </div> 
@@ -163,9 +178,16 @@
     }
   }
   </script>
+
 <style>
 
-
+.AnnouncmentsBox {
+  width: 100%;
+  height: 125px;
+  background-color: cadetblue;
+  border-radius: 10px;
+  border-style: solid;
+}
 
 /* The Modal (background) */
 .modal {
@@ -208,7 +230,7 @@
 
 
 .TEXT{
-    font-family: Arial;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff;
 }
 
@@ -313,6 +335,7 @@ a:active {
 
 
 body {
+  
   background-image: url("https://imagetolink.com/ib/qE2v4IGt7k.png");
 background-size: cover;
       }
