--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
      <p>SubscribePlingifyPlug@outlook.com To join our updates and infomation list. Please do not use this email yet as you will not be signed up to anything and would be entered to our Blacklisted emails/domians due to a software error.</p>
      <p>IssuePlingifyPlug@outlook.com To remove your self from the updates and infomation list aswell as to report a bug, error, staff, developer, sugguest something or report and issue. You can use this to get support</p>
 </div>
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-71b4b7e1-d9ab-48a0-9182-b21eaf50f164"></div>
 </div>
 <center> <h4 style="color: #fff;">Brought to you by PlingifyPlug</h4> </center>
 <center> <h3 style="color: #fff;"> PlingifyPlug© </h3> </center>
