--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             </button>
               </button>
 
-              </button>
+
+              
               <button class="btn">
-                <span class="btn-text-one">Server-Website-Status(Coming Soon)</span>
-                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/PlingifyPlug-SignIn-Register/';" id="myButton" class="btn">Click Here</span>
+                <span class="btn-text-one">Status</span>
+                <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Status/';" id="myButton" class="btn">Click Here</span>
             </button>
 
               <!-- Trigger/Open The Modal -->
