--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 <div class="AnnouncmentsBox">
 
 <h3>All Announcments & Alerts Will Be Shown Here:</h3>
-<p><b>School-Account & Wellington Academy Gone-404 is currently under review and has been Flared due to a IP config found not at the location.</b></p>
-<p><b>Adding a Status Site to check where the sites are blocked-down or brocken.</b></p>
+<p><b>School-Account & Wellington Academy Gone-404 will be unbanned on Monday 10th July due to server issues.</b></p>
+<p><b>Now partnerd with Amafi Clothing. Check it out using the links below.</b></p>
+<p>Many Schools have blocked cloudflare.rammerhead.org the most know RammerHead Browser. Use our site as we offer unblocked sites made sure that if they get blocked we fix it.</p>
 </div>
 
     <p>‎</p>
@@ -95,9 +96,11 @@
      <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
      <h3>AndroidROM:</h3>
      <a href="   "> <h4>PlingifyPlugOS-AndroidROM-Mobile(NOT RELEASED)</h4> </a>
-
-     <p> The reason for the long wait times for software is due to PlingifyPlug only having 2 developer due to not PlingifyPlug not making any money and having no income. If you have any expirence with Java, C++ or Android Studio please contact us PlingifyPlug please email SubscribePlingifyPlug@outlook.com.</p>    </h4>
-     <h5>Email List:</h5>
+<p> The reason for the long wait times for software is due to PlingifyPlug only having 2 developer due to not PlingifyPlug not making any money and having no income. If you have any expirence with Java, C++ or Android Studio please contact us PlingifyPlug please email SubscribePlingifyPlug@outlook.com.</p>    </h4>
+<h3>Partnerd Companys:</h3>
+<a href="https://amafi.teemill.com"><h4>Amafi-Clothing Brand</h4></a>
+<h6>If you wish to partner with us hang tight as we are currenntly setting up the form.</h6>
+<h5>Email List:</h5>
      <p>SubscribePlingifyPlug@outlook.com To join our updates and infomation list. Please do not use this email yet as you will not be signed up to anything and would be entered to our Blacklisted emails/domians due to a software error.</p>
      <p>IssuePlingifyPlug@outlook.com To remove your self from the updates and infomation list aswell as to report a bug, error, staff, developer, sugguest something or report and issue. You can use this to get support</p>
 </div>
@@ -195,7 +198,7 @@
 
 .AnnouncmentsBox {
   width: 100%;
-  height: 125px;
+  height: 200px;
   background-color: cadetblue;
   border-radius: 10px;
   border-style: solid;
