--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
                 <span class="btn-text-two" onclick="location.href = 'https://plingifyplug.github.io/Status/';" id="myButton" class="btn">Click Here</span>
             </button>
 
+
+
               <!-- Trigger/Open The Modal -->
  <button class="btn">
  <span class="btn-text-one"> Terms-Rules</span>
  <span class="btn-text-two" id="myBtn" class="btn">Click Here</span>
 </button>
   </button>
-
+  
+            <button class="btn">
+              <span class="btn-text-one">Amafi</span>
+              <span class="btn-text-two" onclick="location.href = 'https://amafi.teemill.com/';" id="myButton" class="btn">Click Here</span>
+          </button>
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -85,20 +91,19 @@
 
  <div class="menusomething">
 <h3>PlingifyPlug Sites:</h3>
-<a href="https://plingifyplug.github.io/PlingifyPlug/"> <h4>PlingifyPlug</h4> </a>
-<a href="https://plingifyplug.github.io/PlingifyPlug-Videos-Tutorials/"> <h4>PlingifyPlug-Page-Videos-Tutorials</h4> </a>
+<a href="https://plingifyplug.github.io/PlingifyPlug/" > <h4 style="color: green;">PlingifyPlug</h4> </a>
+<a href="https://plingifyplug.github.io/PlingifyPlug-Videos-Tutorials/"> <h4 style="color: orange;">PlingifyPlug-Page-Videos-Tutorials</h4> </a>
 <h3>RammerHead Browsers:</h3>
-<a href="https://plingifyplug.github.io/RammerHead-Gone404-Premium/"> <h4>RammerHead-Premium-English-Paid (Gone-404 Edition)</h4></a>
-<a href="https://plingifyplug.github.io/RammerHead-Accounts/"> <h4>RammerHead-Accounts-Paid (Gone-404 Edition)</h4></a>
-<a href="https://plingifyplug.github.io/RammerHead-Technologys/"><h4>RammerHead-English-Free (Technologys Edition)</h4></a>
-<a href="https://plingifyplug.github.io/RammerHead-NotVilatheaRo/"><h4>RammerHead-English-Free (NotVilatheaRo Edition)</h4></a>
+<a href="https://plingifyplug.github.io/RammerHead-Accounts/"> <h4 style="color: green;">RammerHead-Accounts-Paid (Gone-404 Edition)</h4></a>
+<a href="https://plingifyplug.github.io/RammerHead-Technologys/"><h4 style="color: red;">RammerHead-English-Free (Technologys Edition)</h4></a>
+<a href="https://plingifyplug.github.io/RammerHead-NotVilatheaRo/"><h4 style="color: red;">RammerHead-English-Free (NotVilatheaRo Edition)</h4></a>
      <h3>Figma:</h3>
-     <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
+     <a href="https://plingifyplug.github.io/FigmaDesign-AndroidROM/" style="color: green;"> <h4>PlingifyPlugOS-Figma-Mobile</h4> </a>
      <h3>AndroidROM:</h3>
-     <a href="   "> <h4>PlingifyPlugOS-AndroidROM-Mobile(NOT RELEASED)</h4> </a>
+     <a href="   "> <h4 style="color: red;">PlingifyPlugOS-AndroidROM-Mobile(NOT RELEASED)</h4> </a>
 <p> The reason for the long wait times for software is due to PlingifyPlug only having 2 developer due to not PlingifyPlug not making any money and having no income. If you have any expirence with Java, C++ or Android Studio please contact us PlingifyPlug please email SubscribePlingifyPlug@outlook.com.</p>    </h4>
 <h3>Partnerd Companys:</h3>
-<a href="https://amafi.teemill.com"><h4>Amafi-Clothing Brand</h4></a>
+<a href="https://amafi.teemill.com"><h4 style="color: green;">Amafi-Clothing Brand</h4></a>
 <h6>If you wish to partner with us hang tight as we are currenntly setting up the form.</h6>
 <h5>Email List:</h5>
      <p>SubscribePlingifyPlug@outlook.com To join our updates and infomation list. Please do not use this email yet as you will not be signed up to anything and would be entered to our Blacklisted emails/domians due to a software error.</p>
@@ -341,7 +346,7 @@ a:active {
     background: linear-gradient(#b61111ce, #0d1563);
     border-radius: 10px;
     width: 100%;
-    height: 850px;
+    height: 1000px;
 }
 
 .toppagebox{
